# juris

./: .env.example  .envrc  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  justfile  mni_integration_reference.md  pyproject.toml  sprint_13_public_domain_corpus.md
.github/workflows/: agent-release.yml  ci.yml  uptime.yml
.superpowers/sdd/: progress.md
data/: corpus-sources.md  tos_compliance_log.md
data/corpus/: ojs_tst.json  sumulas_stf.json  sumulas_stj.json  sumulas_tst.json  sumulas_vinculantes.json  temas_repercussao_geral_stf.json  temas_repetitivos_stj.json  templates_peticao.json
data/search-fixtures/: PORTALS.md  stf_tema_sample.json  stj_tema_sample.html  tjsp_tema_sample.html  trf3_tema_sample.html  tst_tema_sample.json
docker/: docker-compose.yml
docs/: deployment.md  design_browser_bridge.md  design_estrategia_auditor.md  engineering_sprints.md  escavacao-moat.md  mni_integration_reference.md  pilot_runbook.md  roadmap_ferramenta_juridica.md  spike_process_discovery.md  sprint_10_drafter.md  sprint_14_unified_search.md
docs/architecture-decisions/: 0010-drafter-agent.md  0011-pades-filing.md  0013-public-domain-corpus.md  0014-multi-court-search.md  0015-local-agent-boundary.md  0016-pii-and-ai-of-preference.md  0017-source-mesh-and-filter.md  0018-ai-provider-browser-session.md  0019-multi-tenant-foundation.md  0020-pilot-persistence-sqlite-fts.md
docs/browser-extension/: README.md  background.js  background.test.js  content.js  content.test.js  manifest.json  native-host.json  package-lock.json  package.json  selectors.js  selectors.test.js
docs/compliance/: README.md  datajud-terms-snapshot-2026-05-09.md  dpa-template-pt.md  ripd-pilot.md  ropa-pilot.md  tst-terms-snapshot-2026-07-02.md
docs/deploy/: agent-install.md  backup-restore.md  blackcube-pilot.md  com.causia.backup.plist  com.causia.purge.plist  com.causia.watchdog.plist  com.juris.agent.plist  com.juris.overnight.plist  com.juris.web.plist  data-erasure.md  local-engine-backup.md  production.md
docs/pilot/: demo-walkthrough.md  onboarding.md  pilot-terms-pt.md  smoke-test-notes.md
docs/sprint-10.5/: data-sources.md
docs/usage/: drafter.md  search.md
packaging/agent/: LEIA-ME.txt  causia-agent.spec  version_info.txt
scripts/: backup_daily.sh  backup_local_engine.sh  causia_watchdog.sh  check_external_uptime.py  doctor_juris_pilot.sh  extract_ojs_tst.py  extract_rg_repetitivos.py  extract_stf_sumulas.py  extract_stj_repetitivos_2025.py  extract_stj_sumulas.py  extract_sumulas_tst.py  extract_sumulas_vinculantes.py  golive_mac_mini.sh  probe_mni_tribunais.py  remote_smoke.py  scan_secrets.py  sign_agent_manifest.py  smoke_relay_broker.py  test_mni_avisos.py  test_mni_connection.py  test_mni_consulta_live.py  test_mni_live.py  test_tjmg_mtls.py  test_tjmg_pkcs11.sh  write_release_meta.py
src/juris/: __init__.py  config.py
tests/: conftest.py
tests/fixtures/: __init__.py  mni_avisos_response.py  mni_consulta_response.py
tests/integration/: test_corpus_expansion.py  test_corpus_verification.py  test_filing_live.py  test_retrieval_quality.py  test_search_live.py
tests/unit/: test_agent_config.py  test_audit.py  test_backup_daily_script.py  test_browser_bridge.py  test_browser_session_llm.py  test_calendar.py  test_cc_prazos.py  test_cli_cloud.py  (+72 more)
(+395 files in other folders)
